--- a/style.css
+++ b/style.css
@@ -8,8 +8,9 @@ body{
 }
 
 #canvasBox{
-  background: rgb(255, 255, 255);
-  border: 2px solid black;
+  background: coral;
+  border: 2px solid rgb(255, 255, 255);
+  border-radius: 20px;
   top: 20%;
   left: 5%;
 }
