--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
 body{
   background: rgb(0, 0, 0);
   display: flex;
@@ -5,6 +7,33 @@ body{
   align-items: center;      /* centers vertically */
   height: 100vh;            /* full viewport height */
   margin: 0;  
+}
+
+#highScoreBoard {
+    float: right;
+    margin-right: 20px;
+    font-weight: bold;
+}
+
+#gameContainer {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+#scorePanel {
+  flex-direction: column;
+  margin-left: 100px;
+  padding: 1px;
+  margin-right: 200px;
+  font-family: 'Press Start 2P', cursive;
+  font-size: 18px;
+  color: #fff;
+}
+
+#scoreBoard,
+#highScoreBoard {
+  margin-bottom: 10px;
 }
 
 #canvasBox{
@@ -27,5 +56,22 @@ body{
   top: 20%;
   left: 5%;
  
+}
+
+#resetButton {
+  margin: 200px;
+  padding: 10px 20px;
+  font-family: 'Press Start 2P', cursive;
+  font-size: 24px;
+  color: #fff;
+  background-color: #00bcd4;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+#resetButton:hover {
+  background-color: #0097a7;
 }
 
