--- a/style.css
+++ b/style.css
@@ -6,7 +6,9 @@ body{
   justify-content: center;  /* centers horizontally */
   align-items: center;      /* centers vertically */
   height: 100vh;            /* full viewport height */
-  margin: 0;  
+  margin: 0;
+  padding: 0;
+  overflow: hidden; 
 }
 
 #gameContainer {
