--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@ body{
   display: flex;
   justify-content: center;  /* centers horizontally */
   align-items: center;      /* centers vertically */
-  height: 100vh;            /* full viewport height */
+  width: 100%;
+  height: 100%;           /* full viewport height */
   margin: 0;
   padding: 0;
   overflow: hidden; 
